--- a/index.html
+++ b/index.html
@@ -58,10 +58,25 @@
 		<section class="maravilhosas container" id="mulheres-maravilhosas">
 			<h3 class="maravilhosas__titulo">Veja todas as mulheres homenageadas nesse projeto!</h3>
 			<div class="maravilhosas__box">
-				
+
 			</div>
 
 				
+		</section>
+		<section class="maravilhosas container" id="mulheres-maravilhosas-cadastro">
+			<h2>Cadastro maravilhoso!</h2>
+			<form action="/action_page.php">
+			  Nome:<br>
+			  <input type="text" name="nome" value="">
+			  <br>
+	
+			  Endereço da imagem':<br>
+			  <input type="text" name="imagem" value="">
+			  <br>
+	
+			  <br><br>
+			  <input type="submit" value="Submit">
+			</form>
 		</section>
 	</main>
 	<footer class="rodape">
@@ -70,6 +85,7 @@
 				<li>
 					<a href="index.html">Home</a>
 				</li>
+
 				<li>
 					<a href="http://www.reprograma.com.br/" target="_blank">Conheça a {reprograma}</a>
 				</li>
