--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
 			<h2>Cadastro maravilhoso!</h2>
 			<form action="/action_page.php">
 			  Nome:<br>
-			  <input type="text" name="nome" value="">
+			  <input type="text" name="nome" id = "nomeCad" value="">
 			  <br>
 	
 			  Endereço da imagem':<br>
-			  <input type="text" name="imagem" value="">
+			  <input type="text" name="imagem"id = "imagemCad" value="">
 			  <br>
 	
 			  <br><br>
-			  <input type="submit" value="Submit">
+			  <input type="submit" value="Submit" id = "botao">
 			</form>
 		</section>
 	</main>
